# rapidoc-fastapi

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
rapidoc_fastapi/: __init__.py  router.py
