[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-rapidoc-router"
version = "0.1.1"
description = "Simple reusable RapiDoc router for FastAPI OpenAPI specs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.100.0",
]
keywords = ["fastapi", "rapidoc", "openapi", "docs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rapidoc_fastapi*"]
